--- a/index.html
+++ b/index.html
@@ -98,7 +98,37 @@
             color: #777;
             text-align: center;
         }
+
+        .abstract-content {
+            display: none;
+            margin-top: 0.5em;
+            padding: 0.5em;
+            background-color: #f0f0f0;
+            border-left: 3px solid #ccc;
+        }
+
+        .abstract-toggle {
+            background-color: #eee;
+            border: none;
+            padding: 0.5em 1em;
+            cursor: pointer;
+            margin-top: 0.5em;
+        }
+
+        .abstract-toggle:hover {
+            background-color: #ddd;
+        }
     </style>
+    <script>
+        function toggleAbstract(id) {
+            var abstract = document.getElementById(id);
+            if (abstract.style.display === "none") {
+                abstract.style.display = "block";
+            } else {
+                abstract.style.display = "none";
+            }
+        }
+    </script>
 </head>
 
 <body>
@@ -114,11 +144,10 @@
 
             <h2>Research Interests</h2>
             <ul>
-                <li>Higher Category Theory</li>
-                <li>Higher Algebra</li>
-                <li>Derived/Spectral Algebraic Geometry</li>
-                <li>Stable Homotopy Theory</li>
-                <li>Functorial Field Theories</li>
+                <li>Higher Category Theory and Higher Algebra [cite: 6, 7]</li>
+                <li>Derived/Spectral Algebraic Geometry [cite: 6, 7]</li>
+                <li>Stable Homotopy Theory [cite: 6, 7]</li>
+                <li>Functorial Field Theories [cite: 6, 7]</li>
             </ul>
 
             <h2>Seminars</h2>
@@ -131,18 +160,24 @@
         <section id="writings">
             <h2>Writings</h2>
             <div class="paper">
-                <p class="paper-title">Master Thesis: Smooth Functorial Field Theory and the Geometric Cobordism Hypothesis</p>
-                <p>Description: This thesis used higher category theory to study quantum field theories via smooth bordism
-                    categories endowed with geometric data (e.g. Riemannian metrics). The main references for this thesis
-                    were the papers arXiv:2111.01095 and arXiv:2011.01208. </p>
+                <p class="paper-title">Master Thesis: Smooth Functorial Field Theory and the Geometric Cobordism Hypothesis [cite: 3]</p>
+                <button class="abstract-toggle" onclick="toggleAbstract('master-abstract')">Show Abstract</button>
+                <div id="master-abstract" class="abstract-content">
+                    <p>This thesis used higher category theory to study quantum field theories via smooth bordism
+                        categories endowed with geometric data (e.g. Riemannian metrics)[cite: 3]. The main references for this thesis
+                        were the papers arXiv:2111.01095 and arXiv:2011.01208. [cite: 4]</p>
+                </div>
                 <p><a href="#">[PDF]</a></p>
             </div>
 
             <div class="paper">
-                <p class="paper-title">Bachelor Thesis: Aspects of the theory of $C^{*}$-operator algebras</p>
-                <p>Description: This thesis delved into the theory of Banach and $C^{*}$ -algebras, including the Gel'fand
-                    transform and GNS construction, to ultimately prove the two Gel'fand-Naimark theorems, which represent
-                    $C^{*}$ -algebras as function algebras or operator algebras on Hilbert spaces. </p>
+                <p class="paper-title">Bachelor Thesis: Aspects of the theory of $C^{*}$-operator algebras [cite: 5]</p>
+                <button class="abstract-toggle" onclick="toggleAbstract('bachelor-abstract')">Show Abstract</button>
+                <div id="bachelor-abstract" class="abstract-content">
+                    <p>This thesis delved into the theory of Banach and $C^{*}$ -algebras, including the Gel'fand
+                        transform and GNS construction, to ultimately prove the two Gel'fand-Naimark theorems, which represent
+                        $C^{*}$ -algebras as function algebras or operator algebras on Hilbert spaces[cite: 5].</p>
+                </div>
                 <p><a href="#">[PDF]</a></p>
             </div>
 
@@ -159,7 +194,7 @@
         <section id="teaching">
             <h2>Teaching</h2>
 
-            <h3>Teaching Assistant, University of Graz</h3>
+            <h3>Teaching Assistant, University of Graz [cite: 2, 6]</h3>
             <ul>
                 <li>Introduction to Algebra (Mar 2024 - Jan 2025) [cite: 6]</li>
                 <li>Elementary Geometry [cite: 6]</li>
@@ -167,7 +202,7 @@
                 <li>Introduction to University Mathematics [cite: 6]</li>
             </ul>
 
-            <h3>Tutor, University of Vienna</h3>
+            <h3>Tutor, University of Vienna [cite: 6]</h3>
             <ul>
                 <li>MMF: Tutoring for freshman students (Oct 2021 - Feb 2022) [cite: 6]</li>
             </ul>
@@ -178,12 +213,11 @@
             <ul>
                 <li>Summer School in Bonn: TQFTs and their connections to representation theory and mathematical physics
                 </li>
-                <li>Conference in Utrecht: (∞, n)-Categories and their applications [cite: 6]</li>
-                <li>Summer School Aarhus: Derived Category Methods in Ring Theory [cite: 6]</li>
-                <li>Summer School + Conference in Mondovi: Toposes in Mondovi [cite: 6]</li>
-                <li>Master Class in Copenhagen: Building bridges between algebra and geometry: Cobordism Categories [cite:
-                    6]</li>
-                <li>Workshop at the University of Wuppertal: Lurie's Elliptic cohomology [cite: 6]</li>
+                <li>Conference in Utrecht: (∞, n)-Categories and their applications</li>
+                <li>Summer School Aarhus: Derived Category Methods in Ring Theory</li>
+                <li>Summer School + Conference in Mondovi: Toposes in Mondovi</li>
+                <li>Master Class in Copenhagen: Building bridges between algebra and geometry: Cobordism Categories</li>
+                <li>Workshop at the University of Wuppertal: Lurie's Elliptic cohomology</li>
 
             </ul>
         </section>
