--- a/index.html
+++ b/index.html
@@ -135,20 +135,19 @@
     <div class="container">
         <section id="about">
             <h1>Alexander Zahrer</h1>
-            <p>Mathematician</p>
+            <p>I am a mathematician from Austria. My academic interests revolve around
+            <ul>
+<li><a href="https://ncatlab.org/nlab/show/higher+category+theory">Higher Category Theory</a> and <a href="https://ncatlab.org/nlab/show/higher+algebra">Higher Algebra</a> [cite: 6, 7]</li>
+<li><a href="https://ncatlab.org/nlab/show/derived+algebraic+geometry">Derived/Spectral Algebraic Geometry</a> [cite: 6, 7]</li>
+<li><a href="https://ncatlab.org/nlab/show/stable+homotopy+theory">Stable Homotopy Theory</a> [cite: 6, 7]</li>
+<li><a href="https://ncatlab.org/nlab/show/functorial+quantum+field+theory">Functorial Field Theories</a> [cite: 6, 7]</li>
+            </ul>
+            </p>
             <p>
-                <strong>Email:</strong> alexander.zahrer@proton.me<br>
-                <strong>Links:</strong>
-                <a href="sites.google.com/view/alexanderzahrer">Website</a>
+                <strong>Email:</strong> alexander.zahrer(at)proton.me<br>
             </p>
 
-            <h2>Research Interests</h2>
-            <ul>
-                <li>Higher Category Theory and Higher Algebra [cite: 6, 7]</li>
-                <li>Derived/Spectral Algebraic Geometry [cite: 6, 7]</li>
-                <li>Stable Homotopy Theory [cite: 6, 7]</li>
-                <li>Functorial Field Theories [cite: 6, 7]</li>
-            </ul>
+
 
             <h2>Seminars</h2>
             <ul>
