--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         body {
             font-family: 'Lato', sans-serif;
             line-height: 1.6;
-            color: #444; /* Slightly darker than before */
+            color: #444;
             margin: 0;
             padding: 0;
             background-color: #f8f8f8;
@@ -25,7 +25,7 @@
         h1,
         h2,
         h3 {
-            color: darkred; /* Changed to dark red */
+            color: darkred;
             font-weight: 400;
             margin-top: 2rem;
             margin-bottom: 1rem;
@@ -48,7 +48,7 @@
         }
 
         a {
-            color: #007bff;
+            color: #b34747; /* Lighter red for links */
             text-decoration: none;
         }
 
@@ -82,18 +82,18 @@
 
         /* Abstract Toggle */
         .abstract-toggle {
-            background-color: transparent; /* Removed gray background */
-            border: none; /* Removed border */
-            padding: 0; /* Adjusted padding */
+            background-color: transparent;
+            border: none;
+            padding: 0;
             cursor: pointer;
             border-radius: 3px;
             margin-top: 0.5rem;
-            color: #007bff; /* Link color */
-            text-decoration: underline; /* Underline */
+            color: #b34747;
+            text-decoration: underline;
         }
 
         .abstract-toggle:hover {
-            color: #0056b3; /* Darker blue on hover */
+            color: #802929;
         }
 
         .abstract-content {
@@ -119,14 +119,14 @@
             margin-bottom: 3rem;
         }
 
-        /* Specific to Interests */
-        #about ul {
+        /* Specific to General */
+        #general ul {
             display: flex;
             flex-wrap: wrap;
             gap: 1rem 2rem;
         }
 
-        #about li {
+        #general li {
             margin-bottom: 0;
         }
 
@@ -156,16 +156,17 @@
 
 <body>
     <div class="container">
-        <section id="about">
+        <section id="general">
             <h1>Alexander Zahrer</h1>
-            <p>Mathematician</p>
+            <p>Mathematician from Austria</p>
             <p>
                 <strong>Email:</strong> alexander.zahrer@proton.me<br>
                 <strong>Links:</strong>
                 <a href="sites.google.com/view/alexanderzahrer">Website</a>
             </p>
 
-            <h2>Research Interests</h2>
+            <h2>General</h2>
+            <p>My academic interests revolve around:</p>
             <ul>
                 <li><a href="https://ncatlab.org/nlab/show/higher+category+theory">Higher Category Theory</a></li>
                 <li><a href="https://ncatlab.org/nlab/show/higher+algebra">Higher Algebra</a></li>
@@ -188,8 +189,7 @@
                 <button class="abstract-toggle" onclick="toggleAbstract('master-abstract')">Show More</button>
                 <div id="master-abstract" class="abstract-content">
                     <p>This thesis used higher category theory to study quantum field theories via smooth bordism
-                        categories endowed with geometric data (e.g. Riemannian metrics). The main references for this thesis
-                        were the papers arXiv:2111.01095 and arXiv:2011.01208.</p>
+                        categories endowed with geometric data (e.g. Riemannian metrics)[cite: 3, 4].</p>
                 </div>
                 <p><a href="#">[PDF]</a></p>
             </div>
@@ -199,51 +199,12 @@
                 <button class="abstract-toggle" onclick="toggleAbstract('bachelor-abstract')">Show More</button>
                 <div id="bachelor-abstract" class="abstract-content">
                     <p>This thesis delved into the theory of Banach and $C^{*}$ -algebras, including the Gel'fand
-                        transform and GNS construction, to ultimately prove the two Gel'fand-Naimark theorems, which represent
-                        $C^{*}$ -algebras as function algebras or operator algebras on Hilbert spaces.</p>
+                        transform and GNS construction, to ultimately prove the two Gel'fand-Naimark theorems[cite: 5].</p>
                 </div>
                 <p><a href="#">[PDF]</a></p>
             </div>
 
             <p><a href="writings.html">More Writings</a></p>
-        </section>
-
-        <section id="publications">
-            <h2>Publications</h2>
-            <p>
-                <i>(This section would be filled in as publications become available)</i>
-            </p>
-        </section>
-
-        <section id="teaching">
-            <h2>Teaching</h2>
-
-            <h3>Teaching Assistant, University of Graz</h3>
-            <ul>
-                <li>Introduction to Algebra (Mar 2024 - Jan 2025)</li>
-                <li>Elementary Geometry</li>
-                <li>Algebra</li>
-                <li>Introduction to University Mathematics</li>
-            </ul>
-
-            <h3>Tutor, University of Vienna</h3>
-            <ul>
-                <li>MMF: Tutoring for freshman students (Oct 2021 - Feb 2022)</li>
-            </ul>
-        </section>
-
-        <section id="conferences">
-            <h2>Attended Summer Schools and Conferences</h2>
-            <ul>
-                <li>Summer School in Bonn: TQFTs and their connections to representation theory and mathematical physics
-                </li>
-                <li>Conference in Utrecht: (∞, n)-Categories and their applications</li>
-                <li>Summer School Aarhus: Derived Category Methods in Ring Theory</li>
-                <li>Summer School + Conference in Mondovi: Toposes in Mondovi</li>
-                <li>Master Class in Copenhagen: Building bridges between algebra and geometry: Cobordism Categories</li>
-                <li>Workshop at the University of Wuppertal: Lurie's Elliptic cohomology</li>
-
-            </ul>
         </section>
 
         <footer>
